# twelve-rs

./: Cargo.toml  Dockerfile  README.md
api/: Cargo.toml
api/src/: error.rs  main.rs
cli/: Cargo.toml
cli/src/: command_error.rs  main.rs
cli/src/config/: log4rs.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/domain/: fetch_record.rs  mod.rs  utils.rs
core/src/repository/: timeseries.rs
core_service/: Cargo.toml
core_service/src/: lib.rs
core_service/src/domain/: fetch_record.rs
core_service/src/model/: mod.rs  tw_queries.rs
core_service/src/repository/: timeseries.rs
migrations/: 20230509172104_init.sql  20230512190042_new_columns.sql
src/: db.rs  lib.rs  main.rs  twelve_api.rs
src/twelve_api/: mod.rs  timeseries.rs
