[workspace]
members = [
	"api",
	"cli",
    "core_service",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.4.1"
edition = "2021"
authors = ["mflJefferson"]
repository = "https://github.com/mflJefferson/twelve-rs"
license-file = "LICENSE"
readme = "README.md"