[package]
name = "twelve-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "mysql", "chrono", "decimal"] }
strum_macros = "0.24"
chrono = { version = "0.4.24", features = ["serde"] }
core_service = { path = "../core_service" }
rust_decimal = { version = "1.29.1", features = ["serde"] }

[[bin]]
name = "twelve-api"
path = "src/main.rs"
