[package]
name = "twelve-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "mysql"] }
clap = {version = "4.2.7", features = ["derive"]}
chrono = { version = "0.4.24", features = ["serde"]}
core_service = { path = "../core_service" }
rust_decimal = { version = "1.29.1", features = ["serde"] }
log4rs = "1.2.0"
log = "0.4.17"
serde_yaml = "0.9.21"

[[bin]]
name = "twelve-cli"
path = "src/main.rs"
